WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280833
REGRESSION(
284553@main
): 2x TestWebKitAPI.IPCTestingAPI (API-Tests) are constant failures
https://bugs.webkit.org/show_bug.cgi?id=280833
Summary
REGRESSION(284553@main): 2x TestWebKitAPI.IPCTestingAPI (API-Tests) are const...
Dawn Morningstar
Reported
2024-10-03 10:38:05 PDT
TestWebKitAPI.IPCTestingAPI.CanInterceptAlert TestWebKitAPI.IPCTestingAPI.CanSendInvalidSyncMessageToUIProcessWithoutTermination These two API tests started failing at
284553@main
https://commits.webkit.org/284553@main
History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.IPCTestingAPI.CanInterceptAlert&test=TestWebKitAPI.IPCTestingAPI.CanSendInvalidSyncMessageToUIProcessWithoutTermination
Test-run:
https://build.webkit.org/#/builders/934/builds/4258
STDIO:
https://build.webkit.org/#/builders/934/builds/4258/steps/19/logs/stdio
FAILURE: TestWebKitAPI.IPCTestingAPI.CanInterceptAlert 2024-10-03 09:02:54.321 TestWebKitAPI[85218:1725392] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'args.length'), WKJavaScriptExceptionColumnNumber=35, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: args = messages[0].arguments; args.length 2024-10-03 09:02:54.321 TestWebKitAPI[85218:1725392] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'args[0]'), WKJavaScriptExceptionColumnNumber=5, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: args[0].type 2024-10-03 09:02:54.322 TestWebKitAPI[85218:1725392] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'args[0]'), WKJavaScriptExceptionColumnNumber=5, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: args[0].value 2024-10-03 09:02:54.322 TestWebKitAPI[85218:1725392] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'args[1]'), WKJavaScriptExceptionColumnNumber=5, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: args[1] instanceof ArrayBuffer 2024-10-03 09:02:54.323 TestWebKitAPI[85218:1725392] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'args[2]'), WKJavaScriptExceptionColumnNumber=5, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: args[2].type 2024-10-03 09:02:54.323 TestWebKitAPI[85218:1725392] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'args[2]'), WKJavaScriptExceptionColumnNumber=5, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: args[2].value LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:548 Value of: !error Actual: false Expected: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:411 Expected equality of these values: [webView stringByEvaluatingJavaScript:@"args = messages[0].arguments; args.length"].intValue Which is: 0 3 /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:548 Value of: !error Actual: false Expected: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:548 Value of: !error Actual: false Expected: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:548 Value of: !error Actual: false Expected: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:414 Expected equality of these values: [webView stringByEvaluatingJavaScript:@"args[1] instanceof ArrayBuffer"].boolValue Which is: false __objc_yes Which is: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:548 Value of: !error Actual: false Expected: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:415 Expected equality of these values: [webView stringByEvaluatingJavaScript:@"args[2].type"].UTF8String Which is: "(null)" "String" /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:548 Value of: !error Actual: false Expected: true /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:416 Expected equality of these values: [webView stringByEvaluatingJavaScript:@"args[2].value"].UTF8String Which is: "(null)" "ok" TestWebKitAPI.IPCTestingAPI.CanSendInvalidSyncMessageToUIProcessWithoutTermination LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:230 Expected equality of these values: [alertMessage UTF8String] Which is: "Receiver cancelled the reply due to invalid destination or deserialization error" "Failed to successfully deserialize the message"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-03 10:38:54 PDT
<
rdar://problem/137215517
>
Dawn Morningstar
Comment 2
2024-10-04 01:36:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34686
EWS
Comment 3
2024-10-04 01:48:38 PDT
Test gardening commit
284667@main
(9b42cf4efb68): <
https://commits.webkit.org/284667@main
> Reviewed commits have been landed. Closing PR #34686 and removing active labels.
Matt Woodrow
Comment 4
2024-10-14 14:42:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35171
EWS
Comment 5
2024-10-14 19:47:13 PDT
Committed
285169@main
(e09e4edf3a03): <
https://commits.webkit.org/285169@main
> Reviewed commits have been landed. Closing PR #35171 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug