REGRESSION(284553@main): 2x TestWebKitAPI.IPCTestingAPI (API-Tests) are constant failures. https://bugs.webkit.org/show_bug.cgi?id=280833 <rdar://137215517>

Reviewed by Simon Fraser.

284553@main changed the error message string, so update
CanSendInvalidSyncMessageToUIProcessWithoutTermination to look for the right
one.

It also made IPC::Decoder's constructor implicitly decode the SyncRequestID, so
make testing code use that value instead of decoding it a second time (which
incorrectly advances the iterator).

* Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp:
(WebKit::IPCTestingAPI::JSMessageListener::jsDescriptionFromDecoder):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:
(TEST(IPCTestingAPI, CanSendInvalidSyncMessageToUIProcessWithoutTermination)):
(CanInterceptAlert)):
(TEST(IPCTestingAPI, DISABLED_CanSendInvalidSyncMessageToUIProcessWithoutTermination)): Deleted.
(DISABLED_CanInterceptAlert)): Deleted.

Canonical link: https://commits.webkit.org/285169@main